<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_Activity.home_fragment"
    android:id="@+id/drawer_layout"
    android:background="@color/home_background">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@color/home_background">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/first"
                android:text="@string/app_name_title"
                android:textColor="@color/dark_maroon"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/app_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/first"
                android:textColor="@color/grey"
                android:text="@string/app_slogan"
                android:textSize="20sp" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:contentPadding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/greeting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Good Morning !"
                    android:textColor="@color/dark_maroon"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/greeting_text"></TextView>

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/sun_temp_image"
                    android:layout_marginRight="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"></ImageView>



            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.denzcoskun.imageslider.ImageSlider
                    android:layout_marginTop="25dp"
                    android:id="@+id/imageSlider"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    app:iss_auto_cycle="true"
                    app:iss_period="3000"
                    app:iss_delay="2000"
                    app:iss_no_dots="true"
                    app:iss_text_align="CENTER"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/first"
                            android:text="@string/categories"
                            android:textAllCaps="true"
                            android:textColor="@color/colorAccent"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/categories_view_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:text="@string/view_all"
                            android:textColor="@color/dark_maroon"/>

                    </RelativeLayout>

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/restaurant_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="170dp"
                                android:orientation="vertical"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="8dp"
                                android:layout_margin="12dp">
                                <RelativeLayout
                                    android:id="@+id/background_gradient"
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:padding="15dp"
                                    android:background="@color/light_green">
                                    <TextView
                                        android:id="@+id/categories_title"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/restaurents"
                                        android:fontFamily="@font/first"
                                        android:textColor="@color/black"
                                        android:textSize="20sp"/>

                                    <ImageView
                                        android:id="@+id/categories_image"
                                        android:layout_width="140dp"
                                        android:layout_height="110dp"
                                        android:src="@drawable/restaurant_image"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"/>
                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/hotels_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="170dp"
                                android:orientation="vertical"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="8dp"
                                android:layout_margin="12dp">
                                <RelativeLayout
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:padding="15dp"
                                    android:background="@color/card2">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/hotels"
                                        android:fontFamily="@font/first"
                                        android:textSize="20sp"
                                        android:textColor="@color/black"/>

                                    <ImageView
                                        android:layout_width="140dp"
                                        android:layout_height="110dp"
                                        android:src="@drawable/hotels_image"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"/>
                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/transport_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="170dp"
                                android:orientation="vertical"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="8dp"
                                android:layout_margin="12dp">
                                <RelativeLayout
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:padding="15dp"
                                    android:background="@color/orange">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/Transport"
                                        android:fontFamily="@font/first"
                                        android:textSize="20sp"
                                        android:textColor="@color/black"/>

                                    <ImageView
                                        android:layout_width="140dp"
                                        android:layout_height="110dp"
                                        android:src="@drawable/transport_image"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"/>
                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/touristPlaces_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="170dp"
                                android:orientation="vertical"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="8dp"
                                android:layout_margin="12dp">
                                <RelativeLayout
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:padding="15dp"
                                    android:background="@color/yellow">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/Place"
                                        android:fontFamily="@font/first"
                                        android:textSize="20sp"
                                        android:textColor="@color/black"/>

                                    <ImageView
                                        android:layout_width="140dp"
                                        android:layout_height="110dp"
                                        android:src="@drawable/tourist_image"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"/>
                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/emergency_btn"
                                android:layout_width="wrap_content"
                                android:layout_height="170dp"
                                android:orientation="vertical"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="8dp"
                                android:layout_margin="12dp">
                                <RelativeLayout
                                    android:layout_width="240dp"
                                    android:layout_height="match_parent"
                                    android:padding="15dp"
                                    android:background="@color/light_maroon">
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/Emergency"
                                        android:fontFamily="@font/first"
                                        android:textSize="20sp"
                                        android:textColor="@color/black"/>

                                    <ImageView
                                        android:layout_width="140dp"
                                        android:layout_height="110dp"
                                        android:src="@drawable/emergency_image"
                                        android:layout_alignParentRight="true"
                                        android:layout_alignParentBottom="true"/>
                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>

                        </LinearLayout>

                    </HorizontalScrollView>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>