<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signIn_signUp_Activity.signin_signup"
    android:background="@color/white"
    android:layout_gravity="center"
    android:padding="15dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="10dp"
        android:visibility="gone">
    </ProgressBar>

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="70dp"
        android:src="@drawable/back_arrow"
        android:paddingTop="25dp"
        android:layout_marginLeft="10dp">
    </ImageView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo">
    </ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/busTermial_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/first"
            android:paddingLeft="10dp"
            android:textColor="@color/black"
            android:text="Title"
            android:textAllCaps="true"
            android:layout_marginTop="100dp"
            android:textSize="25dp" />

        <RelativeLayout
            android:id="@+id/relative_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_below="@id/busTermial_title">

            <TextView
                android:id="@+id/contact_busTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika_new_basic_italic"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:text="Contact No : "
                android:textSize="18dp" />

            <TextView
                android:id="@+id/contact_info_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1234567890"
                android:fontFamily="@font/andika_new_basic_italic"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/contact_busTerminal"
                android:layout_centerVertical="true"
                android:textSize="18dp">
            </TextView>

            <ImageView
                android:id="@+id/copyContact_bus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/copy_txt_image"
                android:layout_alignParentRight="true"
                android:paddingRight="15dp">
            </ImageView>

        </RelativeLayout>

        <View
            android:id="@+id/police_info_view1"
            android:layout_below="@id/relative_contact"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_maroon">
        </View>

        <RelativeLayout
            android:id="@+id/relative_maps"
            android:layout_below="@id/police_info_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/direction_busTerminal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika_new_basic_italic"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:text="Maps : "
                android:textSize="18dp" />

            <TextView
                android:id="@+id/direction_info_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get Instant Direction"
                android:fontFamily="@font/andika_new_basic_italic"
                android:paddingLeft="10dp"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/direction_busTerminal"
                android:layout_centerVertical="true"
                android:textSize="18dp">
            </TextView>

            <ImageView
                android:id="@+id/getDirection_bus"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/map_image"
                android:layout_alignParentRight="true"
                android:paddingRight="15dp">
            </ImageView>

        </RelativeLayout>

        <View
            android:id="@+id/police_info_view2"
            android:layout_below="@id/relative_maps"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/light_maroon">
        </View>

        <TextView
            android:id="@+id/guidelines_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/light_maroon"
            android:paddingLeft="10dp"
            android:text="Guidelines : "
            android:layout_below="@id/police_info_view2">
        </TextView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/guidelines_txt"
            android:layout_marginTop="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/andika_new_basic_italic"
                    android:paddingLeft="10dp"
                    android:text="@string/busTerminal_guideline_1">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/andika_new_basic_italic"
                    android:paddingLeft="10dp"
                    android:text="@string/busTerminal_guideline_2">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/andika_new_basic_italic"
                    android:paddingLeft="10dp"
                    android:text="@string/busTerminal_guideline_3">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/andika_new_basic_italic"
                    android:paddingLeft="10dp"
                    android:text="@string/busTerminal_guideline_4">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textSize="18sp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/andika_new_basic_italic"
                    android:paddingLeft="10dp"
                    android:text="@string/busTerminal_guideline_5">
                </TextView>


            </LinearLayout>

        </ScrollView>
    </RelativeLayout>
</RelativeLayout>